Fix: image shrinking gaps

--- a/src/app/components/single-course/single-course.component.css
+++ b/src/app/components/single-course/single-course.component.css
@@ -1,4 +1,4 @@
 .card-img{
-    height: 290px;
+    max-height: 290px;
     overflow: hidden;
 }
