--- a/src/styles.css
+++ b/src/styles.css
@@ -88,5 +88,5 @@ body {
     transform: scale(1.05);
 }
 .addBoxShadowBelow{
-    box-shadow: 0px 2px 4px 2px #aaa;
+    box-shadow: 0px 1px 1px 1px #aaa;
 }
